src/content/docs/sdk/unity/v4/features/device-info-ko.mdx
---
title: "디바이스 정보 확인"
description: "해당 메서드를 사용하여 콜백에 세부 정보를 추가하고 리포트를 보완하시기 바랍니다."
slug: "ko/sdk/unity/v4/features/device-info"
---

Adjust SDK는 디바이스 정보를 반환하는 헬프 메서드가 포함되어 있습니다. 해당 메서드를 사용하여 콜백에 세부 정보를 추가하고 리포트를 보완하시기 바랍니다.

## Adjust 디바이스 ID {#adjust-device-identifier}

```cs
public static string getAdid();
```

Adjust는 각 기기에 대해 고유한 ADID\(Adjust 기기 ID\)를 생성합니다. `getAdid` 메서드를 호출하면 이 ID가 `string`로 반환됩니다.

```cs
string adid = Adjust.getAdid();
```

## 광고주용 ID {#id-for-advertisers}

<CodeBlock title="메서드 서명">

```cs
public static string getIdfa();
```

</CodeBlock>

IDFA\(광고주용 ID\)는 Apple 기기에 대한 기기별 고유 ID입니다. `getIdfa` 메서드를 호출하면 이 ID가 `string`로 반환됩니다.

```cs
string idfa = Adjust.getIdfa();
```

## Google Play Services Advertising ID {#google-play-services-advertising-id}

<CodeBlock title="메서드 서명">

```cs
public static void getGoogleAdId(Action<string> onDeviceIdsRead);
```

</CodeBlock>

GPS ADID\(Google 플레이 서비스 광고 ID\)는 Android 기기에 대한 기기별 고유 ID입니다.

사용자는 기기에서 "광고 개인 최적화 사용 안 함\(Opt out of Ads Personalization\)"을 설정하고 GPS ADID 공유를 옵트아웃할 수 있습니다. 사용자가 이 설정을 활성화하면, 앱에서 GPS ADID 읽기 시도 시 Adjust SDK가 0으로 구성된 문자열을 반환합니다.

이 값에 액세스하려면 background thread에서 `getGoogleAdId` 메서드를 호출해야 합니다. GPS ADID 값에 액세스하기 위한 델리게이트 함수를 할당합니다.

```cs
Adjust.getGoogleAdId((string googleAdId) => {
   //...
});
```

## Amazon Advertiser ID {#amazon-advertiser-id}

<CodeBlock title="메서드 서명">

```cs
public static string getAmazonAdId();
```

</CodeBlock>

Amazon Ad ID\(Amazon 광고 ID\)는 Android 기기에 대한 기기별 고유 ID입니다. `getAmazonAdId` 메서드를 호출하면 이 ID가 `string`로 반환됩니다.

```cs
string amazonAdId = Adjust.getAmazonAdId();
```
