src/content/docs/sdk/unity/v5/features/device-info-ko.mdx
---
title: 디바이스 정보 확인
description: 해당 메서드를 사용하여 콜백에 세부 정보를 추가하고 리포트를 보완하시기 바랍니다.
slug: ko/sdk/unity/features/device-info
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /ko/sdk/unity/v4/features/device-info
---

Adjust SDK는 디바이스 정보를 반환하는 헬프 메서드가 포함되어 있습니다. 해당 메서드를 사용하여 콜백에 세부 정보를 추가하고 리포트를 보완하시기 바랍니다.

## Adjust 디바이스 ID {#adjust-device-identifier}

```cs
public static void GetAdid(Action<string> callback)
```

Adjust는 각 기기에 대해 고유한 ADID\(Adjust 기기 ID\)를 생성합니다. completion handler와 함께 `Adjust.GetAdid` 메서드를 호출하여 기기의 ADID를 반환할 수 있습니다. SDK는 비동기적으로 정보를 가져와 이 정보를 completion handler에 전달합니다.

```cs
Adjust.GetAdid(adid =>
{
    // Your callback function
});
```

## 광고주용 ID {#id-for-advertisers}

<CodeBlock title="메서드 서명">

```cs
public static void GetIdfa(Action<string> callback)
```

</CodeBlock>

IDFA\(광고주용 ID\)는 Apple 기기에 대한 기기별 고유 ID입니다. completion handler와 함께 `Adjust.GetIdfa` 메서드를 호출하여 기기의 IDFA를 반환할 수 있습니다. SDK는 비동기적으로 정보를 가져와 이 정보를 completion handler에 전달합니다.

```cs
Adjust.GetIdfa(idfa =>
{
   // Your callback function
});
```

## 벤더용 ID {#id-for-vendor}

<CodeBlock title="메서드 서명">

```cs
public static void GetIdfv(Action<string> callback)
```

</CodeBlock>

IDFA\(광고주용 ID\)는 Apple 기기에 대한 기기별 고유 ID입니다. completion handler와 함께 `Adjust.GetIdfv` 메서드를 호출하여 기기의 IDFV를 반환할 수 있습니다. SDK는 비동기적으로 정보를 가져와 이 정보를 completion handler에 전달합니다.

```cs
Adjust.GetIdfv(idfv =>
{
    // Your callback function
});
```

## Google Play Services Advertising ID {#google-play-services-advertising-id}

<CodeBlock title="메서드 서명">

```cs
public static void GetGoogleAdId(Action<string> OnDeviceIdsRead)
```

</CodeBlock>

GPS ADID\(Google 플레이 서비스 광고 ID\)는 Android 기기에 대한 기기별 고유 ID입니다.

사용자는 기기에서 "광고 개인 최적화 사용 안 함\(Opt out of Ads Personalization\)"을 설정하고 GPS ADID 공유를 옵트아웃할 수 있습니다. 사용자가 이 설정을 활성화하면, 앱에서 GPS ADID 읽기 시도 시 Adjust SDK가 0으로 구성된 문자열을 반환합니다.

이 값에 액세스하려면 background thread에서 `GetGoogleAdId` 메서드를 호출해야 합니다. GPS ADID 값에 액세스하기 위한 델리게이트 함수를 할당합니다.

```cs
Adjust.GetGoogleAdId(googleAdId => {
   // Your callback function
});
```

## Amazon Advertiser ID {#amazon-advertiser-id}

<CodeBlock title="메서드 서명">

```cs
public static void GetAmazonAdId(Action<string> onAmazonAdIdRead)
```

</CodeBlock>

Amazon Ad ID\(Amazon 광고 ID\)는 Android 기기에 대한 기기별 고유 ID입니다. 콜백 함수와 함께 `GetAmazonAdId` 메서드를 호출합니다. SDK는 비동기적으로 정보를 가져와 이 정보를 completion handler에 전달합니다.

```cs
Adjust.GetAmazonAdId(amazonAdId => {
   // Your callback function
});
```
